{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 59,
  "lineage": "bb35bf8c-735c-5d82-dba3-35fb8d5dff48",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047f31f455bfdbdeb",
            "domain": "vpc",
            "id": "eipalloc-047f31f455bfdbdeb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-17-131-93.compute-1.amazonaws.com",
            "public_ip": "50.17.131.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-nat0"
            },
            "tags_all": {
              "Name": "main-nat0"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f881db8ea0848879",
            "domain": "vpc",
            "id": "eipalloc-0f881db8ea0848879",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-239-252-167.compute-1.amazonaws.com",
            "public_ip": "34.239.252.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-nat1"
            },
            "tags_all": {
              "Name": "main-nat1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589967651335:internet-gateway/igw-0ee09354acd4bd5df",
            "id": "igw-0ee09354acd4bd5df",
            "owner_id": "589967651335",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-02b428819fbe66d36"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047f31f455bfdbdeb",
            "connectivity_type": "public",
            "id": "nat-0bfc118a1c5cfbef6",
            "network_interface_id": "eni-01f105d60f131bc4c",
            "private_ip": "10.0.0.99",
            "public_ip": "50.17.131.93",
            "subnet_id": "subnet-093742f5bb2245033",
            "tags": {
              "Name": "main-main0"
            },
            "tags_all": {
              "Name": "main-main0"
            }
          },
          "dependencies": [
            "aws_eip.nat0",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f881db8ea0848879",
            "connectivity_type": "public",
            "id": "nat-0bc4bd9f78d7cdf2b",
            "network_interface_id": "eni-057dc7d1e3af1f9ff",
            "private_ip": "10.0.1.211",
            "public_ip": "34.239.252.167",
            "subnet_id": "subnet-06fe93a7d9799e87d",
            "tags": {
              "Name": "main-main1"
            },
            "tags_all": {
              "Name": "main-main1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589967651335:route-table/rtb-040213677c4b0e2f3",
            "id": "rtb-040213677c4b0e2f3",
            "owner_id": "589967651335",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bfc118a1c5cfbef6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private0"
            },
            "tags_all": {
              "Name": "main-private0"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b428819fbe66d36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat0",
            "aws_nat_gateway.main0",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589967651335:route-table/rtb-00e40708a25e605c1",
            "id": "rtb-00e40708a25e605c1",
            "owner_id": "589967651335",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc4bd9f78d7cdf2b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private1"
            },
            "tags_all": {
              "Name": "main-private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b428819fbe66d36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_nat_gateway.main1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589967651335:route-table/rtb-0e9e9fd780211788e",
            "id": "rtb-0e9e9fd780211788e",
            "owner_id": "589967651335",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee09354acd4bd5df",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public"
            },
            "tags_all": {
              "Name": "main-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b428819fbe66d36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b184e96ac70d11c",
            "route_table_id": "rtb-040213677c4b0e2f3",
            "subnet_id": "subnet-0093b62e19544775a"
          },
          "dependencies": [
            "aws_eip.nat0",
            "aws_nat_gateway.main0",
            "aws_route_table.private0",
            "aws_subnet.private0",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029539626636d7a02",
            "route_table_id": "rtb-040213677c4b0e2f3",
            "subnet_id": "subnet-0d6d71e394cecc3a8"
          },
          "dependencies": [
            "aws_eip.nat0",
            "aws_nat_gateway.main0",
            "aws_route_table.private0",
            "aws_subnet.private1",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ef847cc8bba60c1",
            "route_table_id": "rtb-0e9e9fd780211788e",
            "subnet_id": "subnet-093742f5bb2245033"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094396616aed02ee9",
            "route_table_id": "rtb-0e9e9fd780211788e",
            "subnet_id": "subnet-06fe93a7d9799e87d"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589967651335:subnet/subnet-0093b62e19544775a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0093b62e19544775a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589967651335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private0"
            },
            "tags_all": {
              "Name": "main-private0"
            },
            "vpc_id": "vpc-02b428819fbe66d36"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589967651335:subnet/subnet-0d6d71e394cecc3a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6d71e394cecc3a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589967651335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private1"
            },
            "tags_all": {
              "Name": "main-private1"
            },
            "vpc_id": "vpc-02b428819fbe66d36"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589967651335:subnet/subnet-093742f5bb2245033",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093742f5bb2245033",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589967651335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public0"
            },
            "tags_all": {
              "Name": "main-public0"
            },
            "vpc_id": "vpc-02b428819fbe66d36"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589967651335:subnet/subnet-06fe93a7d9799e87d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fe93a7d9799e87d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589967651335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public1"
            },
            "tags_all": {
              "Name": "main-public1"
            },
            "vpc_id": "vpc-02b428819fbe66d36"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:589967651335:vpc/vpc-02b428819fbe66d36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cfe8edba47519f64",
            "default_route_table_id": "rtb-0aae25875cb15203f",
            "default_security_group_id": "sg-031b8f3731af2df09",
            "dhcp_options_id": "dopt-0019ee292b5f7c5a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b428819fbe66d36",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aae25875cb15203f",
            "owner_id": "589967651335",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}